[gd_scene load_steps=10 format=2]

[ext_resource path="res://Battle/Arenas/Assets/win background scroll.png" type="Texture" id=1]
[ext_resource path="res://Main/Assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://hud/quit button.png" type="Texture" id=3]
[ext_resource path="res://Main/Assets/button.tres" type="Texture" id=4]
[ext_resource path="res://Main/Win.gd" type="Script" id=5]

[sub_resource type="Shader" id=24]
code = "shader_type canvas_item;
uniform float speed;
uniform vec2 direction = vec2(0.,1.);


void fragment(){
	vec2 coord = UV;
	coord += direction*TIME*speed;
	COLOR = texture(TEXTURE, coord);
}"

[sub_resource type="ShaderMaterial" id=25]
shader = SubResource( 24 )
shader_param/speed = 1.0
shader_param/direction = Vector2( -1, 1 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 10, 0, 200, 160 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 430, 0, 200, 160 )

[node name="Win" type="Node2D"]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 25 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 494.0
margin_top = 42.0
margin_right = 786.0
margin_bottom = 677.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 285.0
margin_bottom = 628.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 278.0
margin_bottom = 51.0
text = "Congratulations!
You Beat the Game!"
align = 1
percent_visible = 0.0

[node name="Label2" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 278.0
margin_bottom = 457.0
text = "
More is coming soon...

Art: 
Paulo V
Music: 
Aprzn123
Programming:
Aprzn123
Bell
FreegleBarr
Mallard
Discussion and Ideas:
Finn
ZeeAwt"
align = 1
percent_visible = 0.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 461.0
margin_right = 278.0
margin_bottom = 621.0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer"]
margin_left = 39.0
margin_right = 239.0
margin_bottom = 160.0
texture_normal = SubResource( 26 )
texture_pressed = SubResource( 27 )
texture_hover = ExtResource( 4 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/PanelContainer/VBoxContainer/CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
